# cas-offinder

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  RangeIterator.h  bit4ops.cpp  bit4ops.h  bulge_logic.cpp  bulge_logic.h  cas-offinder.cl  cas-offinder.cpp  cas-offinder.h  chromloc.cpp  config.h.in  dump_file_data.cpp  find_mismatched_packed.cpp  find_mismatches.cpp  find_mismatches.h  find_mismatches_cpu.cpp  find_mismatches_opencl.cpp  find_mismatches_opencl_multi.cpp  find_mismatches_packed.cl  find_mismatches_packed.cpp  find_mismatches_utils.cpp  kseq.h  large_pipe_buffer.cpp  main.cpp  main.h  oclfunctions.cpp  oclfunctions.h  opencl_executor.h  patterns.txt  postprocess.cpp  postprocess.h  read_fasta.cpp  read_fasta.h  read_files.cpp  read_folder.cpp  read_twobit.cpp  (+4 more)
.github/workflows/: main.yml  release.yml
CMakeModules/: CMakeCopyKernels.cmake  CopyKernels.cmake  FindOpenCL.cmake
headers/: RangeIterator.h  async_search.h  bidirect_search.h  bit4ops.h  blockify.h  bulge_logic.h  ceildiv.h  channel.h  oclfunctions.h  opencl_executor.h  parse_input.h  read_genome.h  search.h
oldcode/: CMakeLists.txt  cas-offinder.cpp  oclfunctions.h
oldsrc/: CMakeLists.txt  bit4ops.cpp  bit4ops.h  bulge_logic.h  cas-offinder-2.cpp  cas-offinder-3.cpp  channel.h  chunkify_data.cpp  chunkify_data.h  find_mismatches.h  find_mismatches_cpu.cpp  find_mismatches_opencl.cpp  find_mismatches_packed.cl  read_fasta.cpp  read_fasta.h  read_file.h  read_folder.cpp  read_folder.h  read_twobit.cpp  read_twobit.h  search_genome.cpp  search_genome.h  stream_twobit.cpp  stream_twobit.h  timing.h
oldsrc/test/: bulge_logic.cpp  chromloc.cpp  chunkify_data.cpp  test.cpp  test_framework.cpp
src/: async_search.cpp  bidirect_search.cpp  bit4ops.cpp  bit4ops.h  blockify.cpp  bulge_logic.cpp  bulge_logic.h  channel.h  chromloc.h  chunkify_data.cpp  chunkify_data.h  find_mismatches.h  find_mismatches_cpu.cpp  find_mismatches_opencl.cpp  find_mismatches_packed.cl  main_v2.cpp  main_v3.cpp  oclfunctions.cpp  opencl_executor.h  parse_input.cpp  postprocess.h  read_2bit.cpp  read_fasta.cpp  read_fasta.h  read_folder.cpp  read_folder.h  read_genome.cpp  read_genome.h  read_twobit.cpp  read_twobit.h  search.cpp  search_genome.cpp  search_genome.h  search_main.cpp  search_nodep.cpp  timing.h
src/test/: async_search.cpp  bit4ops.cpp  bulge_logic.cpp  chunkify_data.cpp  parse_input.cpp  postprocess.cpp  read_file.cpp  search.cpp  test.cpp  test_framework.cpp  test_framework.h
src/test/t_data/: async_search_out.txt  example.in  example2.in  examplev3.in
test/: async_search.cpp  benchmark.py  bit4ops.cpp  blockify.cpp  bulge_logic.cpp  compare_impls.py  compare_impls3.py  download.py  example1.in  example2.in  example3.in  examplebulge.in  find_mismatches.cpp  parse_input.cpp  postprocess.cpp  read_file.cpp  search.cpp  test.cpp  test_framework.cpp  test_framework.h  test_script.cpp
test/t_data/: async_search_out.txt  example.in  example3.in  expected.txt  upstream1000.2bit  upstream1000.fa
